updated link and tags and added spundekäs

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@ exclude: true
         </label>
       </fieldset>
       <fieldset class="searchbar-group">
-        <label for="breakfast">
-          <input class="searchbar-checkbox js-category" type="checkbox" id="breakfast" value="breakfast">
-          <span class="searchbar-button">Breakfast</span>
+        <label for="morgens">
+          <input class="searchbar-checkbox js-category" type="checkbox" id="morgens" value="morgens">
+          <span class="searchbar-button">Morgens</span>
         </label>
-        <label for="lunch">
-          <input class="searchbar-checkbox js-category" type="checkbox" id="lunch" value="lunch">
-          <span class="searchbar-button">Lunch</span>
+        <label for="mittags">
+          <input class="searchbar-checkbox js-category" type="checkbox" id="mittags" value="mittags">
+          <span class="searchbar-button">Mittags</span>
         </label>
-        <label for="dinner">
-          <input class="searchbar-checkbox js-category" type="checkbox" id="dinner" value="dinner">
-          <span class="searchbar-button">Dinner</span>
+        <label for="abends">
+          <input class="searchbar-checkbox js-category" type="checkbox" id="abends" value="abends">
+          <span class="searchbar-button">Abends</span>
         </label>
         <label for="snacks">
           <input class="searchbar-checkbox js-category" type="checkbox" id="snacks" value="snacks">
@@ -58,31 +58,27 @@ exclude: true
         </label>
       </fieldset>
       <fieldset class="searchbar-group">
-        <label for="vegetarian">
-          <input class="searchbar-checkbox js-meat" type="checkbox" id="vegetarian" value="vegetarian">
-          <span class="searchbar-button">Vegetarian</span>
+        <label for="vegetarisch">
+          <input class="searchbar-checkbox js-meat" type="checkbox" id="vegetarisch" value="vegetarisch">
+          <span class="searchbar-button">Vegetarisch</span>
         </label>
-        <label for="meat">
-          <input class="searchbar-checkbox js-meat" type="checkbox" id="meat" value="meat">
-          <span class="searchbar-button">Meat</span>
+        <label for="fleisch">
+          <input class="searchbar-checkbox js-meat" type="checkbox" id="fleisch" value="fleisch">
+          <span class="searchbar-button">Fleisch</span>
         </label>
-        <label for="fish">
-          <input class="searchbar-checkbox js-meat" type="checkbox" id="fish" value="fish">
-          <span class="searchbar-button">Fish</span>
+        <label for="fisch">
+          <input class="searchbar-checkbox js-meat" type="checkbox" id="fisch" value="fisch">
+          <span class="searchbar-button">Fisch</span>
         </label>
       </fieldset>
       <fieldset class="searchbar-group">
-        <label for="asian">
-          <input class="searchbar-checkbox js-origin" type="checkbox" id="asian" value="asian">
+        <label for="asia">
+          <input class="searchbar-checkbox js-origin" type="checkbox" id="asia" value="asia">
           <span class="searchbar-button">Asian</span>
         </label>
-        <label for="italian">
-          <input class="searchbar-checkbox js-origin" type="checkbox" id="italian" value="italian">
-          <span class="searchbar-button">Italian</span>
-        </label>
-        <label for="latin-american">
-          <input class="searchbar-checkbox js-origin" type="checkbox" id="latin-american" value="latin-american">
-          <span class="searchbar-button">Latin American</span>
+        <label for="italienisch">
+          <input class="searchbar-checkbox js-origin" type="checkbox" id="italienisch" value="italienisch">
+          <span class="searchbar-button">Italienisch</span>
         </label>
       </fieldset>
     </form>
