--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ exclude: true
     {% if page.image %}
       <div class="hero-background" style="background-image: url('{{ site.baseurl }}{{ site.assets }}{{ site.images }}/posts/{{ page.ref }}.jpeg'); background-image: -webkit-image-set( url('{{ site.baseurl }}{{ site.assets }}{{ site.images }}/posts/{{ page.ref }}.jpeg') 1x, url('{{ site.baseurl }}{{ site.assets }}{{ site.images }}/posts/{{ page.ref }}-large.jpeg') 2x )"></div>
       <div class="hero-overlay"></div>
-      <aside id="metabar" class="metabar{% if include.color %} {{ include.color }}{% endif %}">
+      <aside id="metabar" class="metabar -white">
         <div class="metabar-wrapper">
             <div class="metabar-left">
                 <a class="metabar-logo" href="{{ site.baseurl }}/#" aria-label="Visit 'Made by Connor.'" title="Visit 'Made by Connor.'">
